    - add replace/per/os/dependencies mecanism
    - fix a bug insde the get_from_cache helper when a fragmented url is used and the upstream server does not understand them
    - add a special exception for search_latest when error happen.
    - fake user agent in urlopen calls to prevent mad sysadmins restrictions on python useragent.
    - allow minibuild names with only major as version

1.0.19
===========

    - distribute fix

1.0.18
========

    - remove deprecationwarning

1.0.17
=========

    - remove deprecationwarning

1.0.16
=======


    - oups, left print

1.0.15
========

    - let the default minilay be at lower priority among all

1.0.14
=======

    - desactivating updates manager for more tests.

-> 1.0.13
==========

    - Minitage now allows binaries to be used instead of compiling programs,
      in the gentoo -k way.
    - Minitage has now also an update manager to run udpate functions on
      upgrade.

1.0.5
=======

    - bugfix on url md5sum fragments

1.0.4
=========

    - make conditionnal weither we are offline or not the download in the get_from_cache function.

1.0.0 -> 1.0.3
==================

    - x64 enlightments
    - add optionnal force switch to the download cache function


1.0
=====

    - some API adds like 'search_latest' and 'which'
    - bugfix in interfaces for configuration handling
    - buildout maker can be given an optionnal config to build
    - code stabilization and sync with other minitage components
    - official documentation on http://www.minitage.org


0.32
=====

    - Fetch by default over http

0.4.30
========
    - Bind buildout newest mode with -u option


0.4.30
=======

    - do not delete directories but overwrite when the package src uri change.


0.4.29
=======

    - Make minitage lives on git

0.4.28
=======

    - Make minitage git aware both in recipes and in core.

0.4.27
=======

    - force setuptools version

0.4.26
=======

    - bugfix on common functions (API)

0.4.21
=======
