@@ -23,6 +23,7 @@ UP
     - add a special exception for search_latest when error happen.
     - fake user agent in urlopen calls to prevent mad sysadmins restrictions on python useragent.
     - allow minibuild names with only major as version
+    - explicit error when the buildout configuration file is not there
 
 1.0.19
 ===========
